Added more properties to add new project modal, working autocomplete box in that modal, next are labels and priorities, then creating new project.

--- a/app/app.css
+++ b/app/app.css
@@ -4,3 +4,7 @@
   border-radius: 5px;
   padding: 10px;
 }
+
+.md-virtual-repeat-container.md-autocomplete-suggestions-container {
+  z-index: 9999;
+}
