Issue page now displays proper information, next step - edit issue page and edit project page.

--- a/app/app.css
+++ b/app/app.css
@@ -3,6 +3,11 @@ textarea {
   resize: none;
 }
 
+hr {
+  border-color: black;
+  border-width: 2px;
+}
+
 .border-box{
   border: 1px solid black;
   border-radius: 5px;
