Comments added, username now displays next to logout button, could add some more notifications later.

--- a/app/app.css
+++ b/app/app.css
@@ -21,3 +21,30 @@ hr {
 .md-virtual-repeat-container.md-autocomplete-suggestions-container {
   z-index: 9999;
 }
+
+.ng-invalid.ng-dirty {
+    border-color: red;
+    outline-color: red;
+}
+
+.ng-valid.ng-dirty {
+    border-color: green;
+    outline-color: green;
+}
+
+.messages {
+  font-size: smaller;
+  padding-top: 5px;
+  padding-bottom: 10px;
+  color: red;
+}
+
+.align-left {
+	float: left;
+}
+.align-right {
+	float: right;
+}
+.clearfix {
+  clear: both;
+}
